* Fix long standing issue w.r.t. (Mark5) media change detection: media change would never split a job.
* Option sortAntennas in .v2d file (default=true) now allows prevention of sorting (set sortAntennas=false).  Use of this feature requires an antenna list to be provided in the .v2d file.
* Remove dangerous option for antenna partial matching in .v2d file
* Version for DiFX-2.5, May 16, 2017

Version 2.4.0
~~~~~~~~~~~~~
* Support axis offset argument for ANTENNAs
* Adapt to string-based networkPort in support of raw sockets
* Detect mismatched bandwidths and issue warning
* Fix smart tone selection for phase cal interval != 1 MHz
* Make tone selection default the same whether an ANTENNA section exists or not (default is Smart)
* EB and AR to use VLBA Cannonical Thread Ids for VDIF
* Respect record enable bit in SCHED section (enable column must be > 0 to retain the data)
* Bugfix for allocating bands to baselines for some combinations of zoom bands and LSB
* Reading complex type and #bits from vexfile
* Version for DiFX-2.4, Nov 4, 2014

Version 2.3.0
~~~~~~~~~~~~~
* Suport for VDIFL added
* Move some NRAO-specific utilities outside this package
* vexpeek: new --format and --diskusage options
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
* vexpeek: --bands mode
* Support writing of .machines file
* Improved support for FAKE
* Verify input files do not have DOS end of line characters
* Populate difxLabel in difxio->.calc and in .joblist
* Generate systematic threadId
* Verify all or none of the ephemeris parameters are provided
* c++11 compliance
* Don't allow subintNS greater than about 1 second (to ward off MODE errors)
* Remove "using namespace std" from .h files; goal is to remove them from .cpp files in time
* Track oversample value in channel structure; move checking downstream to more relevant code.
* Add a few features (ephemDeltaT, ephemStellarAber, ephemClockError) useful in